--- a/template/yolo.html
+++ b/template/yolo.html
@@ -8,198 +8,255 @@
 	</head>
 	<body>
 		<div id="top" class="center">
-			<div id="header" class="side">
+			<div id="header" class="block side">
 				<h1 id="title">tiddeR</h1>
 			</div>
-			<div id="search" class="main">
+			<div id="search" class="block main">
 				<form action="index.php">
-					<input type="text" name="search" value="* by recent"/>
+					<input type="text" name="search" value="* by date"/>
 				</form>
+			</div>
+			<div id="user" class="block side disapear">
+				<a href="#">Ak:kes <span class="fa fa-user"/></a>
 			</div>
 		</div>
 		<div class="center">
-			<div id="sidebar" class="side">
+			<div id="sidebar" class="block side">
 				<div class="sidebar-element">
 					<ul>
 						<li>
-							<a href="#">Yolkfsdljfo</a>
+							<a href="#">Popular</a>
 						</li>
 						<li>
-							<a href="#" class="selected">Yolo sdfsd</a>
+							<a href="#" class="selected">Recents</a>
 						</li>
 						<li>
-							<a href="#">Yolsdf jskfo</a>
+							<a href="#">Best</a>
 						</li>
 						<li>
-							<a href="#">Yoqskjs lo</a>
+							<a href="#">Controversé</a>
 						</li>
 					</ul>
 				</div>
 				<div class="sidebar-element">
 					<ul>
 						<li>
-							<a href="#">Yolkfsdljfo</a>
+							<a href="#">HTML</a>
 						</li>
 						<li>
-							<a href="#" class="selected">Yolo sdfsd</a>
+							<a href="#">CSS</a>
 						</li>
 						<li>
-							<a href="#">Yolsdf jskfo</a>
+							<a href="#">PHP</a>
 						</li>
 						<li>
-							<a href="#">Yoqskjs lo</a>
-						</li>
-					</ul>
-				</div>
-				<div class="sidebar-element">
-					<ul>
-						<li>
-							<a href="#">Yolkfsdljfo</a>
-						</li>
-						<li>
-							<a href="#" class="selected">Yolo sdfsd</a>
-						</li>
-						<li>
-							<a href="#">Yolsdf jskfo</a>
-						</li>
-						<li>
-							<a href="#">Yoqskjs lo</a>
+							<a href="#">SCSS</a>
 						</li>
 					</ul>
 				</div>
 			</div>
-			<div id="content" class="main">
+			<div id="content" class="block main">
 				<ul>
 					<li class="post">
-						<h2>Tuna Ipsum</h2>
+						<h2 class="block three-quarter title">Tuna Ipsum</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>European minnow priapumfish mosshead warbonnet shrimpfish bigscale. Cutlassfish porbeagle shark ricefish walking catfish.</p>
-						<ul class="tags">
-							<li><a href="#">HTML</a></li>
-							<li><a href="#">PHP</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">PHP</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>Corporate Ipsum</h2>
+						<h2 class="block three-quarter title"><a href="https://www.thunderclap.it/fr/projects/25535-contre-la-loi-renseignement">Thunderclap: Contre la loi renseignement</a></h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
+						<p>“Le #PJLRenseignement tant décrié sera voté demain. Pour nos libertés individuelles, nous voulons un débat national ! <a href="http://thndr.it/1E3fVkV">http://thndr.it/1E3fVkV</a>”</p>
+						<div class="block full disapear">
+							<ul class="block third tags">
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">SCSS</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="post">
+						<h2 class="block three-quarter title">Corporate Ipsum</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>Efficiently unleash cross-media information without «cross-media» value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar.</p>
-						<ul class="tags">
-							<li><a href="#">CSS</a></li>
-							<li><a href="#">SCSS</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">SCSS</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>«Tina Belcher» Ipsum</h2>
+						<h2 class="block three-quarter title">«Tina Belcher» Ipsum</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>Here's a bunch of numbers. They may look random but they're my phone number. I'm no hero. I just put my bra on one boob at a time. She grabbed Jimmy Jr's butt and changed the world.</p>
-						<ul class="tags">
-							<li><a href="#">PHP</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">PHP</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>Cat Ipsum — éèçàöü&amp;ïôûî</h2>
+						<h2 class="block three-quarter title">Cat Ipsum — éèçàöü&amp;ïôûî</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>Climb leg rub face on everything give attitude nap all day for under the bed. Chase mice attack feet but rub face on everything hopped up on goofballs. &amp; éèçàöüïôûî</p>
-						<ul class="tags">
-							<li><a href="#">HTML</a></li>
-							<li><a href="#">CSS</a></li>
-							<li><a href="#">PHP</a></li>
-							<li><a href="#">SCSS</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">PHP</a></li>
+								<li><a href="#">SCSS</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>Tuna Ipsum</h2>
+						<h2 class="block three-quarter title">Tuna Ipsum</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>European minnow priapumfish mosshead warbonnet shrimpfish bigscale. Cutlassfish porbeagle shark ricefish walking catfish.</p>
-						<ul class="tags">
-							<li><a href="#">HTML</a></li>
-							<li><a href="#">PHP</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">PHP</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>Corporate Ipsum</h2>
+						<h2 class="block three-quarter title"><a href="https://www.thunderclap.it/fr/projects/25535-contre-la-loi-renseignement">Thunderclap: Contre la loi renseignement</a></h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
+						<p>“Le #PJLRenseignement tant décrié sera voté demain. Pour nos libertés individuelles, nous voulons un débat national ! <a href="http://thndr.it/1E3fVkV">http://thndr.it/1E3fVkV</a>”</p>
+						<div class="block full disapear">
+							<ul class="block third tags">
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">SCSS</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+							</ul>
+						</div>
+					</li>
+					<li class="post">
+						<h2 class="block three-quarter title">Corporate Ipsum</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>Efficiently unleash cross-media information without «cross-media» value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar.</p>
-						<ul class="tags">
-							<li><a href="#">CSS</a></li>
-							<li><a href="#">SCSS</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">SCSS</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>«Tina Belcher» Ipsum</h2>
+						<h2 class="block three-quarter title">«Tina Belcher» Ipsum</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>Here's a bunch of numbers. They may look random but they're my phone number. I'm no hero. I just put my bra on one boob at a time. She grabbed Jimmy Jr's butt and changed the world.</p>
-						<ul class="tags">
-							<li><a href="#">PHP</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star-o"></li>
-							<li class="fa fa-star-o"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">PHP</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 					<li class="post">
-						<h2>Cat Ipsum — éèçàöü&amp;ïôûî</h2>
+						<h2 class="block three-quarter title">Cat Ipsum — éèçàöü&amp;ïôûî</h2>
+						<p class="block quarter disapear date">26 Avril 2015</p>
 						<p>Climb leg rub face on everything give attitude nap all day for under the bed. Chase mice attack feet but rub face on everything hopped up on goofballs. &amp; éèçàöüïôûî</p>
-						<ul class="tags">
-							<li><a href="#">HTML</a></li>
-							<li><a href="#">CSS</a></li>
-							<li><a href="#">PHP</a></li>
-							<li><a href="#">SCSS</a></li>
-						</ul>
-						<ul class="rating">
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-							<li class="fa fa-star"></li>
-						</ul>
+						<div class="disapear">
+							<ul class="block third tags">
+								<li><a href="#">HTML</a></li>
+								<li><a href="#">CSS</a></li>
+								<li><a href="#">PHP</a></li>
+								<li><a href="#">SCSS</a></li>
+							</ul>
+							<p class="block third author">Uinelj</p>
+							<ul class="block third rating">
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+								<li class="block"><a href="action.php?a=vote&amp;v=1" class="fa fa-star-o"></a></li>
+							</ul>
+						</div>
 					</li>
 				</ul>
 			</div>
 		</div>
 		<div id="footer" class="center">
-			<div class="side">
+			<div class="block side">
 				<p><a href="#top">^Top</a></p>
 			</div>
-			<div class="main">
+			<div class="block main">
 				<p>Created by <a href="http://uinelj.eu">Uinelj</a> &amp; <a href="http://akkes.fr">Ak:kes</a></p>
 			</div>
 		</div>
