--- a/template/style.css
+++ b/template/style.css
@@ -86,6 +86,10 @@ a:hover{
 	width: 3cm;
 }
 
+#footer .main{
+	font-family: 'Playfair Display SC', serif;
+}
+
 /* top */
 
 #title{
@@ -155,6 +159,7 @@ ul{
 
 #user{
 	text-align: right;
+	font-family: 'Playfair Display SC', serif;
 }
 
 /* posts */
@@ -237,4 +242,14 @@ ul{
 
 .rating li:hover ~ li a:before{
 	content: "\f006	";
+}
+
+/* comments */
+#comments{
+	border-top: 1px solid black;
+	padding-top: 1rem;
+}
+
+#comments p{
+	text-indent: 1cm;
 }
