--- a/template/style.css
+++ b/template/style.css
@@ -21,6 +21,16 @@ h1, h2, h3{
 	font-family: 'Playfair Display SC', serif;
 }
 
+h1 a, h2 a, h3 a{
+	color: black;
+}
+
+fieldset{
+	border: none;
+	padding: 0;
+	margin: 0;
+}
+
 a:hover{
 	text-decoration: underline;
 }
@@ -75,7 +85,7 @@ a:hover{
 
 .center{
 	margin: auto;
-	width: 21cm;
+	width: 21.706cm;
 }
 
 #top{
@@ -87,7 +97,7 @@ a:hover{
 }
 
 .side{
-	width: 3cm;
+	width: 3.353cm;
 }
 
 #footer .main{
@@ -223,6 +233,10 @@ ul{
 	text-align: right;
 }
 
+.rating ul{
+	display: inline;
+}
+
 .rating a{
 	padding: .5mm;
 	text-decoration: none;
@@ -239,8 +253,7 @@ ul{
 }
 
 /* rating interaction */
-.rating:hover ul:hover li a:before,
-.rating:hover li a:before{
+.rating ul:hover li a:before{
 	content: "\f005";
 }
 
