--- a/template/style.css
+++ b/template/style.css
@@ -112,10 +112,6 @@ a:hover{
 /* top */
 
 #title{
-	-webkit-transform:rotateY(180deg);
-	-moz-transform:rotateY(180deg);
-	-o-transform:rotateY(180deg);
-	-ms-transform:rotateY(180deg);
 	transform:rotateY(180deg);
 	unicode-bidi:bidi-override;
 	direction:rtl;
@@ -281,12 +277,12 @@ ul{
 }
 
 /* login */
-form > h2{
+form h2{
 	text-align: center;
 	margin-bottom: 1em;
 }
 
-form > p{
+form p{
 	float: right;
 	margin: 0;
 }
@@ -327,4 +323,9 @@ table{
 
 tr:nth-child(2n+2){
 	background-color: #f0f0f0;
+}
+
+/* posting */
+form li{
+	display: inline;
 }
